added another link to my resume

--- a/index.html
+++ b/index.html
@@ -522,6 +522,7 @@
             <p><i class="fa fa-map-marker"></i> 1000 Olin Way, MB107, Needham, MA  02492 </p>
             <p><i class="fa fa-phone"></i> (818) 397-1143 </p>
             <p><i class="fa fa-envelope-o"></i> <a href="mailto:4a19c76a@opayq.com">Email Me</a> </p>
+            <p><i class="fa fa-book"></i>Download a <a href="misc/fbourke_resume.pdf">PDF of my Resume</a></p>
           </div>
           
           <div class="col-sm-7">
