added a flickr link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 </header>
                 <div class="social-icons">
                         <a href="http://www.linkedin.com/profile/view?id=321196702" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.flickr.com/photos/forrestbourke/" class="btn btn-round btn-clear btn-flickr"><i class="fa fa-flickr"></i></a>
                          <a href="misc/fbourke_resume.pdf" class="btn btn-round btn-clear btn-resume"><i class="fa fa-book"></i></a>
                         <a href="#page-skills" class="btn btn-round btn-clear btn-arrow"><i class="fa fa-arrow-down"></i></a>
                     
@@ -522,7 +523,7 @@
             <p><i class="fa fa-map-marker"></i> 1000 Olin Way, MB107, Needham, MA  02492 </p>
             <p><i class="fa fa-phone"></i> (818) 397-1143 </p>
             <p><i class="fa fa-envelope-o"></i> <a href="mailto:4a19c76a@opayq.com">Email Me</a> </p>
-            <p><i class="fa fa-book"></i>Download a <a href="misc/fbourke_resume.pdf">PDF of my Resume</a></p>
+            <p><i class="fa fa-book"></i> Download a <a href="misc/fbourke_resume.pdf">PDF of my Resume</a></p>
           </div>
           
           <div class="col-sm-7">
