add essay section, essay on shutter speed, blueimp gallery (replace this with carousel?)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vegas/jquery.vegas.css">
     <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/blueimp-gallery.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,12 +42,13 @@
            <!--  <li><a href="#page-profile">Profile</a></li> -->
             <li><a href="#page-skills">Metrics</a></li>
             <li><a href="#page-portfolio">Portfolio</a></li>
+            <li><a href="#page-essays">Essays</a></li>
             <li><a href="#page-contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div> <!-- navbar ends -->
-        <!-- welcome begins -->
+      <!-- welcome begins -->
     <section id="page-welcome" class="page-welcome">
       <div>
           <ul class="slider-controls">
@@ -72,8 +74,8 @@
         </div>
     </section><!-- welcome -->
        <!-- skills -->
-     <section id="page-skills" class="page-skills">
-       <div class="container skill-percents">
+    <section id="page-skills" class="page-skills">
+      <div class="container skill-percents">
          <header class="section-header">
             <h2 class="section-title"><span>Metrics</span></h2>
               <div class="spacer"></div>
@@ -114,7 +116,7 @@
         <div class="row issue-row">
           <p>*According to Social Security Administration actuarial tables</p>
         </div>
-    </div>
+      </div>
     </section><!-- skills -->
     <!-- portfolio begins -->
     <section id="page-portfolio" class="page-portfolio">
@@ -509,6 +511,18 @@
                 </div>
           </div><!-- end modal -->
     </section><!-- portfolio ends -->
+    <!-- essays begins -->
+    <section id="page-essays" class="page-essays">
+       <div class="container skill-percents">
+        <header class="section-header">
+            <h2 class="section-title"><span>Essays</span></h2>
+              <div class="spacer"></div>
+            <p class="section-subtitle">This section is for random things I might want to write. Essay is probably too grand a term.  </p>
+            <p><a href="shutter.html">Shutter Testing</a></p>
+            <!-- <p><a href="two.html">Two</a></p> -->
+        </header>
+    </div>
+    </section><!-- essays -->
     <!-- contact begins -->
     <section id="page-contact" class="page-contact">
       <div class="container">
