--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@
               <div class="spacer"></div>
             <p class="section-subtitle">This section is for random things I might want to write. Essay is probably too grand a term.  </p>
             <p><a href="shutter.html">Shutter Testing</a></p>
+            <p><a href="diana.html">Diana F vs Diana F+</a></p>
             <!-- <p><a href="two.html">Two</a></p> -->
         </header>
     </div>
