add all speeds to FP shutter

--- a/diana.html
+++ b/diana.html
@@ -74,6 +74,7 @@
               <li>Focal length: Maybe 75mm? </li>
               <li>Image quality: Awful </li>
               <li>Light leaks: Yes </li>
+              <li>Real shutter speed: about 1/20</li>
             </ul>
             <h6>Body and Construction</h6>
             <p>The body is plastic. The blue/green plastic on this camera is a little bit less bright than the newer Diana F+. </p>
@@ -83,6 +84,7 @@
             <p>These cameras use an extremely simple shutter mechanism that consists of two pivoting discs covering the hole to the film. When you press shutter switch (it's less of a button and more of a switch), the first disc moves out of the way, and causes the second disc (which has a circular cutout) to flip across the opening. The shutter "speed" is how long the openings cross each other. In bulb mode, the second disc is stopped so that the openings are aligned.</p>
             <p>When this Diana F arrived in my life, its shutter had broken. Unfortunately, the plastic of the lens is welded together, so I had to break it open to access the mechanism. I slipped the spring back on the small brass spring holder, sprayed some teflon lubricant in the whole mechanism, and taped it back up with gaffer's tape. It's still quite unreliable.</p>
             <p>The aperture mechanism is a pivoting metal piece with two holes, making the three aperture settings. On my Diana F, the detent for keeping the aperture in place is very loose, so it doesn't really stay in place very well. </p>
+            <p>I tested the shutter of the Diana F with my shutter tester, I get that the true shutter speed is closest to 1/20, but it varies by more than 2/3 of a stop in either direction. </p>
             <p>I've included pictures of the shutter mechanism if you're curious, so you don't have to break the camera open yourself.</p>
             <div class="well">
               <h4>Diana F Mechanism</h4>
@@ -113,7 +115,8 @@
               <li>Aperture options: f/8, f/11, f/16 </li>
               <li>Focal length: Maybe 75mm? </li>
               <li>Image quality: Awful </li>
-              <li>Light leaks: Yes </li>
+              <li>Light leaks: Yes </li>    
+              <li>Real shutter speed: about 1/180</li>
             </ul>
             <h6>Body and Construction</h6>
             <p>The body is plastic. Lomography did a pretty good job of copying the original Diana F. They added:
@@ -122,12 +125,15 @@
               <li>A little plastic widget to keep the shutter open in bulb mode </li>
               <li>Hot shoe adapters for the flash </li>
               <li>A pinhole aperture setting </li>
+              <li>A plastic doodad for keeping the shutter open</li>
               <li>The ability to remove the lens </li>
+              <li>Three frame settings, including a 12 exposure setting</li>
             </ul> </p>
             <h6>Shutter Mechanism</h6>
             <p>The Diana F+ has a reliable shutter mechanism, which supposedly fires around 1/60 of a second. I mean reliable in the sense of I haven't had to break the camera and fix it, though who knows, 50 years down the road. The aperture mechanism (mechanism might be a strong word) sticks in place much better than the mechanism on the Diana F. This probably goes without saying, but if you ever shoot slide film in a Diana, make sure to cross-process it, since it seems to give more latitude. </p>
+            <p> I tested the shutter of the Diana F+ with my shutter testing circuit. Lomography rated the shutter speed at 1/60, but my testing indicates it's closest to 1/180, within a tolerance of 0.15 stops. This interesting, that the shutter is 1.6 stops faster than their rating. This Diana is <it>way</it> faster than the Diana F. I'd be interested to test other Diana F+ cameras to see how much the variance is by camera.</p>
             <h6>Focusing</h6>
-            <p>The Diana F+ has the same focusing scheme (the lens screws in and out slightly) and distances as the Diana F, except the F+ distances are written in meters, and there are little icons next to the distances, for people who don't understand meters.</p>
+            <p>The Diana F+ has the same focusing scheme (the lens screws in and out slightly) and distances as the Diana F, except the F+ distances are written in meters, and there are little icons next to the distances, for people who don't understand metric units.</p>
             <h6>The Flash</h6>
             <p>The F in the name of these cameras comes from the fact that they can sync with a flash. Unfortunately, though the holes are spaced the same width apart, the F+ flash does not fit on the Diana F. My Diana F did not come with a flash, so I have no basis of comparison, but the Diana F+ flash runs on a single AA battery and puts out enough light to expose some pictures properly. I usually try to avoid direct flash, but when the image quality is so bad, what does it matter.</p>
             <p>The Diana F+ comes with two adapters: female F+ to male hot shoe, and female hot shoe to male F+. This means you can do silly things, like put the F+ flash on a real camera, or put a real flash (or wireless flash transmitter) on the Diana F+. Why you would choose to do these things, besides looking silly, is beyond me. </p>
