--- a/diana.html
+++ b/diana.html
@@ -8,7 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,600,700' rel='stylesheet' type='text/css'>
 
-    <title>Forrest Bourke | Shutter Testing</title>
+    <title>Forrest Bourke | Diana Camera Review</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
