add small message

--- a/shutter.html
+++ b/shutter.html
@@ -55,7 +55,7 @@
         </header>
         <div class="row essay-text">
           <div class="col-md-12">
-            <p>Working with old cameras, I came to wonder how accurate the shutter speeds were. I built a simple circuit with a photodiode and an op-amp to optically determine the actual shutter speed, and measured it for various lens/shutter combinations.</p>
+            <p>Working with old cameras, I came to wonder how accurate the shutter speeds were. I built a simple circuit with a photodiode and an op-amp to optically determine the actual shutter speed, and measured it for various lens/shutter combinations. Pictures of all the lenses and the setup are at the end.</p>
             <p>Below is a plot of all the lenses/shutters I've tested so far. For each speed, I test it three times and use the average. On the x-axis is the shutter speed displayed on the lens, and on the y-axis is the deviation from that shutter speed in f/stops. For example, if a lens set at 1/50 is actually firing at 1/25, the deviation will be listed as +1. </p>
             <div class="well">
               <!-- <img class="img-responsive" src="img/essays/optar_comparison.png" alt="" /> -->
