add bying advice to diana review

--- a/diana.html
+++ b/diana.html
@@ -100,7 +100,7 @@
               <h4>Light leaking onto the Diana F</h4>
               <img class="img-responsive" src="img/essays/lightleaks.jpg" alt="Light leaks" />
             </div>
-
+            <div class="spacer"></div>
             <h5>Diana F+</h5>
             <h6>Specs</h6>
             <ul>
@@ -149,6 +149,8 @@
             </div>
             <h5>Overall</h5>
             <p>Do you feel encumbered by the ability of your camera to produce quality images? Do you want everyone to know you not only buy clothing from Urban Outfitters, but also "lifestyle" products? The Diana is perfect for you in either case. All that said — if you can get good images out of a Diana, you can get good images out of any camera. If that's what you want to practice, by all means, go for it. </p>
+            <h5>Buying Advice</h5>
+            <p>If you want one of these, you know you want one. I'd recommend looking around eBay so you don't have to pay Lomography's horrible prices. If you want a "special edition," then you're honestly probably beyond help. </p>
             <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls blueimp-gallery-carousel">
                 <div class="slides"></div>
                 <h3 class="title"></h3>
@@ -170,7 +172,7 @@
             </div>
           </div>
         </div>
-    </section><!-- skills -->
+    </section>
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
