--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <header class="centered">
                     <h1>Forrest Bourke</h1>
-                    <p id="hello">ENGINEERING STUDENT</p>
+                    <p id="hello">ENGINEER</p>
                 </header>
                 <div class="social-icons">
                         <a href="http://www.linkedin.com/profile/view?id=321196702" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
@@ -83,7 +83,7 @@
         </header>
         <div class="row">
           <div class="col-md-2 col-md-offset-1">
-            <span class="chart" data-percent="87.5" data-places="1">
+            <span class="chart" data-percent="100" data-places="1">
               <span class="percent"></span>
               <h3>Undergraduate Education Completed</h3>
             </span>
@@ -103,7 +103,7 @@
           <div class="col-md-2">
           <span class="chart" data-percent="85" data-places="4">
             <span class="percent"></span>
-            <h3>Significant figures</h3>
+            <h3>Significant Figures</h3>
           </span>
           </div>
           <div class="col-md-2">
