--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p id="hello">ENGINEER</p>
                 </header>
                 <div class="social-icons">
-                        <a href="http://www.linkedin.com/profile/view?id=321196702" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.linkedin.com/in/forrest-bourke-87a6998b/" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
                         <a href="https://www.flickr.com/photos/forrestbourke/" class="btn btn-round btn-clear btn-flickr"><i class="fa fa-flickr"></i></a>
                         <!--  <a href="misc/fbourke_resume.pdf" class="btn btn-round btn-clear btn-resume"><i class="fa fa-book"></i></a> -->
                         <a href="#page-skills" class="btn btn-round btn-clear btn-arrow"><i class="fa fa-arrow-down"></i></a>
