add content for turbo writeup

--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
             <p class="section-subtitle">This section is for random things I might want to write. Essay is probably too grand a term.  </p>
             <p><a href="shutter.html">Shutter Testing</a></p>
             <p><a href="diana.html">Diana F vs Diana F+</a></p>
+            <p><a href="turbo.html">Installing a Junkyard Turbo in my 1984 Volvo 245</a></p>
             <!-- <p><a href="two.html">Two</a></p> -->
         </header>
     </div>
