--- a/turbo.html
+++ b/turbo.html
@@ -7,6 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:100,300,400,600,700' rel='stylesheet' type='text/css'>
 
     <title>Forrest Bourke | Installing a Junkyard Turbo in my 1984 Volvo 245</title>
 
