--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li><a href="#page-portfolio">Portfolio</a></li>
             <li><a href="#page-essays">Essays</a></li>
             <li><a href="#page-contact">Contact</a></li>
+            <li><a href="https://forrestbourke.bigcartel.com/">Store</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -536,7 +537,7 @@
         <div class="row">
           <div class="col-sm-5 contact-info">
             <h3>Contact Info</h3>
-            <p><i class="fa fa-map-marker"></i> 1000 Olin Way, MB107, Needham, MA  02492 </p>
+            <!-- <p><i class="fa fa-map-marker"></i> 1000 Olin Way, MB107, Needham, MA  02492 </p> -->
             <p><i class="fa fa-phone"></i> (818) 397-1143 </p>
             <p><i class="fa fa-envelope-o"></i> <a href="mailto:4a19c76a@opayq.com">Email Me</a> </p>
             <p><i class="fa fa-book"></i> Download a <a href="misc/fbourke_resume.pdf">PDF of my Resume</a></p>
