start the polaroid I2 writeup

--- a/new/index.html
+++ b/new/index.html
@@ -17,7 +17,10 @@
 	<a href=/resume.pdf>resume</a>
 	<hr>
 	<b>Posts: </b><br>
-	<code>01 JUL 2020 <a href=posts/turbo> Installing a Junkyard Turbo in my 1984 Volvo 245</a><br></code>
+	<code>25 JUN 2025 <a href=posts/i2/polaroid_i2.html> Reverse Engineering and Repair of the Polaroid 
+I2</a><br></code>
+	<code>01 JUL 2020 <a href=posts/turbo/volvo_turbo.html> Installing a Junkyard Turbo in my 1984 Volvo 
+245</a><br></code>
 	<code>26 MAR 2016 <a href=posts/diana> Comparison and Review of Diana Film Cameras </a><br></code>
 	<code>22 MAR 2016 <a href=posts/shutter> Testing Various Film Camera Shutters</a><br></code>
 <!-- 	<code>2020-11-01 <a href=posts/k1000-shutter-measurement> Measuring Camera Shutter Speeds </a><br></code>
